<resources>
    <string name="app_name">Sakura</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first">疫情查询</string>
    <string name="label_sencond">疫情热搜</string>
    <string name="label_third">疫情地图</string>
    <string name="hint_txt">Input Time</string>
    <string name="label_time">请输入时间</string>
    <string name="lable_nation">请输入地区</string>
    <string name="lable_province">请输入省份</string>
    <string name="lable_btn">查看</string>
    <string name="label_checkworld">查看世界疫情情况</string>
    <string name="label_checkchina">查看中国疫情情况</string>
    <string name="label_confirm">确诊人数</string>
    <string name="label_dead">死亡人数</string>
    <string name="label_cure">治愈人数</string>

    <string name="label_inpnews">请输入标题</string>
    <string name="menu_set_label">查看地区</string>
    <string name="search_text">请输入关键词</string>
    <string name="result_area">省份</string>
    <string name="todo">TODO</string>

    <string name="search_top">疫情热搜</string>
    <string name="res_area" >地区</string>


</resources>
