<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F5f5f5"
            android:gravity="center"
            android:text="@string/label_first"
            android:textSize="25sp"></Button>
        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#252323"
            android:contentDescription="@string/todo"></ImageView>

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#F5f5f5"
            android:gravity="center"
            android:text="@string/label_sencond"
            android:textSize="25sp"></Button>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#252323"
            android:contentDescription="@string/todo"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="760dp"
        android:background="@mipmap/bac"
        android:orientation="vertical">


        <Button
            android:id="@+id/china"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="#00000000"
            android:drawableStart="@drawable/ic_china"
            android:drawableLeft="@drawable/ic_china"
            android:gravity="center"
            android:text="@string/label_checkchina"
            android:textSize="20sp"></Button>

        <ImageView
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="1dp"

            android:background="#252323"
            android:contentDescription="@string/todo"></ImageView>

        <Button
            android:id="@+id/world"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="#00000000"
            android:drawableStart="@drawable/ic_world"
            android:drawableLeft="@drawable/ic_world"
            android:gravity="center"
            android:text="@string/label_checkworld"
            android:textSize="20sp"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#00000000"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_confrm"
                android:gravity="center"
                android:text="@string/label_confirm"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#252323"
                android:contentDescription="@string/todo"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_dead"
                android:gravity="center"
                android:text="@string/label_dead"
                android:textSize="20sp"></TextView>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#252323"
                android:contentDescription="@string/todo"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableBottom="@drawable/ic_cured"
                android:gravity="center"
                android:text="@string/label_cure"
                android:textSize="20sp">

            </TextView>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>

